# influxdb-renamer

./: Cargo.toml  README.md
src/: main.rs
